# DSKIM_audio_atmosphere_classification

./: README.md  pyproject.toml
Abgabe/: ReadMe.md
Abgabe/html/: 0_data_exploration.html  1_AST_class_weights.html  2_Labels_data_aug.html  3_AST_class_weights_reduce_DataLabels.html
Abgabe/notebooks/: 0_data_exploration.ipynb  1_AST_class_weights.ipynb  3_AST_class_weights_reduce_DataLabels.ipynb  AST_class_weights.ipynb  AST_class_weights_reduce_DataLabels.ipynb  Labels_data_aug (1).ipynb  Labels_data_aug (2).ipynb  data_exploration.ipynb
data/16k_data/: meta.json  training_25112024.npz
data/48k_data/: meta.json  training.npz
src/data/: AST_chang_DataLabels.ipynb  data_exploration.ipynb
src/examples/: AST_Classification.ipynb  AST_chang_DataLabels.ipynb  MelSpec.ipynb
src/exploration/: sound_exploration.ipynb
src/features/: test.ipynb
src/models/: AST_chang_DataLabels(1).html  AST_chang_DataLabels(6).ipynb  AST_chang_DataLabels.ipynb  AST_class_weights.ipynb  AST_class_weights_data_aug.ipynb  AST_class_weights_partly_data_aug.ipynb  AST_class_weights_reduce_DataLabels.html  AST_class_weights_reduce_DataLabels.ipynb  Labels_data_aug.ipynb  ast.ipynb  random_forest.ipynb
